--- a/html/user_paga_admin.html
+++ b/html/user_paga_admin.html
@@ -44,7 +44,7 @@
             <div class="mt-4">
                 <div class="card flex-row flex-wrap" style="max-width: 30rem;">
                     <div class="card-header border-0">
-                        <img src="default.jpg" alt="User Image" class0="img-thumbnail">
+                        <img src="default.jpg" alt="User Image" class="img-thumbnail">
                     </div>
                     <div class="card-block px-2">
                         <div class="mt-4">
@@ -53,11 +53,11 @@
                         <div class="mt-4">
                             <p class="card-text">E-mail</p>
                         </div>
-                        <div class="mt-4">
+                     
                             <div class="d-flex justify-content-end">
                                 <i class="far fa-trash-alt"></i>
                             </div>
-                        </div>
+                      
                     </div>
                     <div class="w-100"></div>
                     <div class="card-footer w-100 text-muted">
